# vlmbench

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  ROADMAP.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/vlmbench/: MODELS.md  SKILL.md
.github/workflows/: ci.yml  publish.yml
jobs/: bench_worker.py  launch_gpu_sweep.py
scripts/: build_finevision_vlmbench.py  run_benchmark.sh  simple_benchmark.py
scripts/datasets/: curate_finevision.py
scripts/hf_jobs/: README.md  run_benchmark.py  sweep_gpus.py
tests/: test_vlmbench.py
vlmbench/: __init__.py  cli.py
vlmbench/profiles/: deepseek-ocr.yaml  dse-qwen2-vl.yaml  glm-ocr.yaml  nanonets-ocr-s.yaml  paddleocr-vl.yaml  qwen3-vl-2b.yaml  qwen3-vl-8b.yaml  qwen3-vl-embed.yaml  qwen3-vl-reranker.yaml  qwen3.5-0.8b.yaml
